# craftstrat

./: .dockerignore  .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  docker-compose.override.yml  docker-compose.yml  package-lock.json
database/migrations/: 2026_02_21_082053_add_plan_stripe_team_to_users_table.php  2026_02_21_082103_create_wallet_strategies_table.php  2026_02_21_082105_create_trades_table.php  2026_02_21_082106_create_copy_relationships_table.php  2026_02_21_082108_add_copy_relationship_fk_to_trades_table.php  2026_02_21_082109_create_backtest_results_table.php
docs/: SPEC.md
docs/plans/: 2026-02-21-phase1-infrastructure.md  (+9 more)
engine/: Cargo.toml
engine/src/: config.rs  healthcheck.rs  main.rs  metrics.rs  proxy.rs  supervisor.rs
engine/src/api/: error.rs  mod.rs  routes.rs  state.rs  tests.rs
engine/src/api/handlers/: backtest.rs  copy.rs  metrics.rs  mod.rs  safe.rs  stats.rs  status.rs  strategy.rs  wallet.rs
engine/src/backtest/: metrics.rs  mod.rs  runner.rs
engine/src/execution/: analytics.rs  executor.rs  fees.rs  mod.rs  orders.rs  queue.rs  relayer.rs  wallet.rs
engine/src/fetcher/: gamma.rs  mod.rs  models.rs  tick_builder.rs  websocket.rs
engine/src/kafka/: consumer.rs  producer.rs
engine/src/stats/: queries.rs  types.rs
engine/src/storage/: clickhouse.rs  postgres.rs  redis.rs
engine/src/strategy/: bandit.rs  engine.rs  eval.rs  indicators.rs  interpreter.rs  ml_features.rs  mod.rs  registry.rs  state.rs  test_utils.rs
engine/src/strategy/interpreter/: form_mode.rs  mod.rs  node_mode.rs  risk.rs
engine/src/tasks/: api_fetch_task.rs  data_feed.rs  engine_tasks.rs  execution_tasks.rs  json_path.rs  mod.rs  model_score_task.rs  persistence.rs  slot_resolver.rs  trade_analytics.rs  writers.rs
engine/src/watcher/: polymarket.rs
infra/: backup.sh
ml/: pyproject.toml  refresh_model_bundle.py  requirements.txt  serve_trainer.py  serve_xgboost.py  test_refresh_model_bundle.py  train_xgboost.py  xgboost_pipeline.py
web/: composer.json  package-lock.json  package.json  vite.config.ts
web/routes/: web.php  (+1 more)
(+179 files in other folders)
