[package]
name = "oddex-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rdkafka = { version = "0.37", features = ["cmake-build"] }
clickhouse = { version = "0.13", features = ["time", "inserter"] }
redis = { version = "0.27", features = ["tokio-comp"] }
chrono = { version = "0.4", features = ["serde"] }
rayon = "1.10"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"
dotenvy = "0.15"
anyhow = "1"
time = "0.3"
