[package]
name = "craftstrat-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = ">=1, <1.0.220", features = ["derive"] }
serde_json = "1"
rdkafka = { version = "0.37", features = ["cmake-build"] }
clickhouse = { version = "0.13", features = ["time", "inserter"] }
redis = { version = "0.27", features = ["tokio-comp"] }
chrono = { version = "0.4", features = ["serde"] }
rayon = "1.10"
reqwest = { version = "0.12", features = ["json"] }
axum = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"
dotenvy = "0.15"
anyhow = "1"
time = { version = "0.3", features = ["serde", "serde-human-readable"] }
alloy = { version = "0.14", features = ["signers", "signer-local", "sol-types"] }
aes-gcm = "0.10"
zeroize = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "time", "uuid", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
rand = "0.8"
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
